welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:20: error: ';' expected but ',' found.
           	{numeroterSol() ; setPos(hauteur-1-i)-j,j)} }
                                                       ^